--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'com.nextplugins'
-version = '1.0.2'
+version = '1.0.3'
 
 tasks.build.dependsOn('shadowJar')
 
@@ -28,12 +28,12 @@ dependencies {
     implementation 'com.github.HenryFabio.configuration-injector:bukkit:main-SNAPSHOT'
     implementation 'org.bstats:bstats-bukkit:1.8'
 
-    compileOnly 'org.projectlombok:lombok:1.18.16'
-    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 shadowJar {
-    archiveName("${project.name}.jar")
+    archiveName("${project.name}-${project.version}.jar")
     relocate('com.henryfabio.minecraft.configinjector', 'com.nextplugins.commandpassword.libs.configinjector')
     relocate('org.bstats', 'com.nextplugins.commandpassword.libs.bstats')
 }
